--- a/Kwitter_room.html
+++ b/Kwitter_room.html
@@ -25,8 +25,9 @@
 			<sup>
 			</sup>
 		</h1>
-		<h3 id="user_name" class="color_white"></h3>
+		
 		<div class="form-group input_div_room_page">
+			<h3 id="user_name" class="color_white">HELLO</h3>
 			<label>#Add Room:</label>
 			<input type="text" id="room_name" class="form-control" placeholder="#roomname">
 
